heron/grammar.js
    source_file: $ => seq(
      repeat($.import_decl),
      repeat($._top_decl),
    ),

    // v1.x-IMPORT: bare `import "path";` (no alias) is a
    // parse error. The grammar reflects that — `as IDENT`
    // is required.
    import_decl: $ => seq(
      'import',
      field('path', $.string_literal),
      'as',
      field('alias', $.identifier),
      ';',
    ),

    _top_decl: $ => choice(
      $.locus_decl,
      $.perspective_decl,
      $.type_decl,
      $.const_decl,
      $.function_decl,
      $.ffi_function_decl,
      $.interface_decl,
      $.topic_decl,
      $.ring_layout_decl,
      $.module_decl,
    ),

    interface_decl: $ => seq(
      'interface',
      field('name', $.identifier),
      '{',
      repeat($.interface_method_sig),
      '}',
    ),

    interface_method_sig: $ => seq(
      'fn',
      field('name', $.identifier),
      '(',
      optional($._param_list),
      ')',
      optional(seq('->', field('return_type', $._type_expr))),
      ';',
    ),

    ring_layout_decl: $ => seq(
      'ring_layout',
      field('name', $.identifier),
      '{',
      repeat($._ring_layout_member),
      '}',
    ),

    _ring_layout_member: $ => choice(
      $.ring_magic,
      $.ring_data_at,
      $.ring_overflow,
      $.ring_scalar_field,
      $.ring_cursor_block,
      $.ring_framing_block,
    ),

    ring_magic: $ => seq('magic', $.integer_literal, ';'),
    ring_data_at: $ => seq('data_at', $.integer_literal, ';'),
    ring_overflow: $ => seq('overflow', $.ring_word, ';'),

    // `version 1 at 8 : u32;` — name, optional expected value, offset,
    // width repr.
    ring_scalar_field: $ => seq(
      field('name', $.identifier),
      optional($.integer_literal),
      'at',
      field('offset', $.integer_literal),
      ':',
      field('repr', $.ring_word),
      ';',
    ),

    ring_cursor_block: $ => seq(
      'cursor',
      optional(field('name', $.identifier)),
      '{',
      repeat($.ring_attr),
      '}',
    ),

    ring_framing_block: $ => seq(
      'framing',
      field('kind', $.ring_word),
      '{',
      repeat($.ring_attr),
      '}',
    ),

    ring_attr: $ => seq(
      field('key', $.identifier),
      choice($.ring_word, $.integer_literal),
      ';',
    ),

    // A layout token: an identifier, or one of the few keyword-spelled
    // words that can appear in a layout value position.
    ring_word: $ => choice(
      $.identifier,
      'release',
      'drop',
      'fail',
      'block',
    ),

    // ===========================================================
    // § 2. Locus declaration
    // ===========================================================

    locus_decl: $ => seq(
      // F.32-2 v0.2 (2026-05-25): `@form(...)` and
      // `@locality(...)` may both decorate the same locus,
      // in either order; each may appear at most once. Real
      // arity is enforced by the host typechecker; the
      // grammar accepts the looser shape.
      repeat($._locus_decorator),
      optional('main'),
      'locus',
      field('name', $.identifier),
      optional($.generic_params),
      optional($.locus_annotations),
      '{',
      repeat($._locus_member),
      '}',
    ),

    _locus_decorator: $ => choice(
      $.form_annotation,
      $.locality_annotation,
      $.export_annotation,
    ),

    // `@export locus` (WASM #152/#153): the persistent singleton
    // "app" of a wasm program — instantiated once, never
    // dissolved, its `fn` methods exported to the JS host.
    form_annotation: $ => seq(
      '@',
      'form',
      '(',
      field('form_name', $.identifier),
      repeat(seq(',', $.form_arg)),
      ')',
    ),

    form_arg: $ => seq(
      field('key', $.identifier),
      '=',
      field('value', $._expression),
    ),

    // F.32-2 v0.2 (2026-05-25): @locality(L1|L2|L3|any)
    // pins a per-locus cache-tier budget that the host's
    // working-set estimator evaluates against. See
    // spec/types.md § "Working-set estimator (F.32-2)" for
    // the budget precedence rules.
    locality_annotation: $ => seq(
      '@',
      'locality',
      '(',
      field('tier', $.locality_tier),
      ')',
    ),

    locality_tier: $ => choice(
      'L1',
      'L2',
      'L3',
      'any',
    ),

    locus_annotations: $ => seq(
      ':',
      $._locus_header_item,
      repeat(seq(',', $._locus_header_item)),
    ),

    // Perspectives Phase 2a (2026-06): the post-`:` list may
    // carry `serves P` conformance clauses intermixed with the
    // annotations — `locus RouterV1 : serves Router, tier 2 { }`.
    // `serves` is a contextual ident recognized only here. Hidden
    // grouping rule so annotations stay direct children of
    // `locus_annotations`; `serves` gets its own named node.
    _locus_header_item: $ => choice(
      $.locus_annotation,
      $.serves_clause,
    ),

    locus_annotation: $ => choice(
      seq('tier', $.integer_literal),
      seq('projection', $.projection_class),
      seq('schedule', $.schedule_class),
    ),

    projection_class: $ => choice(
      'rich',
      'chunked',
      seq('recognition', $.recognition_params),
    ),

    _locus_member: $ => choice(
      $.params_block,
      $.contract_block,
      $.bus_block,
      $.capacity_block,
      $.lifecycle_decl,
      $.mode_decl,
      $.failure_decl,
      $.closure_decl,
      $.function_decl,
      $.const_decl,
      $.type_decl,
      $.bindings_block,
      $.placement_block,
      $.topology_block,
      $.birth_check_decl,
    ),

    // F.31 (2026-05-23): `placement { field: <spec>; ... }`
    // declares where each main-locus param field's locus
    // runs. Only valid on a `main locus`; the typechecker
    // enforces "field exists in params" and "no duplicate
    // field keys." The grammar accepts placement entries on
    // any locus; the typechecker rejects on non-main.
    placement_block: $ => seq(
      'placement',
      '{',
      repeat($.placement_entry),
      '}',
    ),

    // F.35 (2026-05-28): an optional `where <constraint>, ...`
    // suffix declaring operational constraints on the route
    // (v0.1: `async_io`).
    placement_entry: $ => seq(
      field('field', $.identifier),
      ':',
      field('spec', $.placement_spec),
      optional(seq(
        'where',
        $.placement_constraint,
        repeat(seq(',', $.placement_constraint)),
      )),
      ';',
    ),

    placement_spec: $ => choice(
      seq(
        'cooperative',
        optional(seq(
          '(',
          'pool',
          '=',
          field('pool', $.identifier),
          ')',
        )),
      ),
      seq(
        'pinned',
        optional(seq(
          '(',
          $.pin_attr,
          repeat(seq(',', $.pin_attr)),
          optional(','),
          ')',
        )),
      ),
    ),

    params_block: $ => seq(
      'params',
      '{',
      repeat($.param_decl),
      '}',
    ),

    param_decl: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $._type_expr))),
      choice(
        seq('=', field('default', $._expression), ';'),
        seq(':', 'inferred', ';'),
        ';',   // required-shape: name: T;
      ),
    ),

    // ===========================================================
    // § 4. Contract block
    // ===========================================================

    capacity_block: $ => seq(
      'capacity',
      '{',
      repeat($.capacity_slot),
      '}',
    ),

    capacity_slot: $ => seq(
      field('kind', choice('pool', 'heap')),
      field('name', $.identifier),
      'of',
      field('cell_type', $._type_expr),
      optional(seq('indexed_by', field('indexed_by', $.identifier))),
      optional(seq('as_parent_for', field('as_parent_for', $.identifier))),
      ';',
    ),

    // ===========================================================
    // § 6. Lifecycle blocks
    // ===========================================================

    lifecycle_decl: $ => seq(
      field('kind', $._lifecycle_keyword),
      optional(seq('(', optional($._param_list), ')')),
      optional(seq('->', field('return_type', $._type_expr))),
      $.block,
    ),

    _lifecycle_keyword: $ => choice(
      'birth',
      'accept',
      'run',
      'drain',
      'dissolve',
    ),

    // ===========================================================
    // § 7. Mode declarations
    // ===========================================================

    closure_decl: $ => seq(
      'closure',
      field('name', $.identifier),
      '{',
      optional(seq($.closure_assertion, ';')),
      repeat($.closure_clause),
      '}',
    ),

    closure_assertion: $ => seq(
      $._expression,
      choice('~~', 'approx'),
      $._expression,
      'within',
      $._expression,
    ),

    closure_clause: $ => choice(
      seq('epoch', $._epoch_spec, ';'),
      seq('persists_through', '(', $._identifier_list, ')', ';'),
      seq('resets_on', '(', $._identifier_list, ')', ';'),
      // F.34 (2026-05-28, v1.x-WINDOWED): windowed reset — the
      // named captures reset once per epoch boundary.
      seq('resets_per_epoch', '(', $._identifier_list, ')', ';'),
      seq('captures', ':', $._identifier_list, ';'),
    ),

    _epoch_spec: $ => choice(
      'tick',
      seq('duration', '(', $._expression, ')'),
      'birth',
      'dissolve',
      'explicit',
      'inline',
    ),

    // ===========================================================
    // § 10. Perspective declaration
    // ===========================================================

    type_decl: $ => choice(
      // type T = type_expr;
      seq('type', field('name', $.identifier), optional($.generic_params),
          '=', field('aliased', $._type_expr), ';'),
      // type T { field: Type; ... }  (struct)
      seq('type', field('name', $.identifier), optional($.generic_params),
          '{', repeat($.struct_field), '}'),
      // type T = enum { A, B(int), ... };
      seq('type', field('name', $.identifier), optional($.generic_params),
          '=', 'enum', '{',
          $.enum_variant, repeat(seq(',', $.enum_variant)), '}', ';'),
    ),

    struct_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type_expr),
      optional(seq('=', field('default', $._expression))),
      // Go-style metadata tag — a backtick raw string. Shares the
      // backtick token with time literals (which only appear in
      // expression position); here it's a field tag.
      optional(field('tag', $.time_literal)),
      ';',
    ),

    generic_params: $ => seq(
      '<',
      $.generic_param,
      repeat(seq(',', $.generic_param)),
      '>',
    ),

    generic_param: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('constraint', $._type_expr))),
    ),

    _type_expr: $ => choice(
      $.primitive_type,
      $.named_type,
      $.projection_type,
      $.perspective_type,
      $.array_type,
      $.tuple_type,
      $.function_type,
      $.unit_type,
      seq('(', $._type_expr, ')'),
    ),

    // `()` — the unit type. Per spec/types.md: "If a fn omits
    // `-> T`, the return type defaults to `()`. Explicit `-> T`
    // is required for any non-unit return." Some stdlib fns
    // spell `-> ()` explicitly when paired with `fallible(E)`
    // so the fallible-success-type is unambiguous.
    unit_type: $ => seq('(', ')'),

    primitive_type: $ => choice(
      'Int', 'Uint', 'Float', 'Decimal', 'String', 'Bool',
      'Time', 'Duration', 'Bytes',
      'BytesView', 'StringView',
    ),

    named_type: $ => seq($.qualified_name, optional($.generic_args)),

    qualified_name: $ => seq(
      $.identifier,
      repeat(seq('::', $.identifier)),
    ),

    // ===========================================================
    // § 13. Const and function decls
    // ===========================================================

    function_decl: $ => seq(
      'fn',
      field('name', $.identifier),
      optional($.generic_params),
      '(',
      optional($._param_list),
      ')',
      optional(seq('->', field('return_type', $._type_expr))),
      optional($.fallible_marker),
      $.block,
    ),

    // @ffi("c") fn name(params) -> ret ;
    fallible_marker: $ => seq(
      'fallible',
      '(',
      field('payload_type', $._type_expr),
      ')',
    ),

    _param_list: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type_expr),
      optional(seq('=', field('default', $._expression))),
    ),

    // ===========================================================
    // § 14. Statements + blocks
    // ===========================================================

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),     // trailing expression (Phase 2b)
      '}',
    ),

    _statement: $ => choice(
      $.let_stmt,
      $.assign_stmt,
      $.send_stmt,
      $.if_stmt,
      $.match_stmt,
      $.for_stmt,
      $.while_stmt,
      $.return_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.yield_stmt,
      $.terminate_stmt,
      $.reperspective_stmt,
      $.recovery_stmt,
      $.violate_stmt,
      $.fail_stmt,
      $.block,
      $.expr_stmt,
    ),

    // 2026-05-30 per-child terminate: ends this locus's own
    // lifecycle from within a handler/run body.
    let_stmt: $ => seq(
      'let',
      optional('mut'),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type_expr))),
      '=',
      field('value', $._expression),
      ';',
    ),

    assign_stmt: $ => seq(
      field('target', $.lvalue),
      field('op', $._assign_op),
      field('value', $._expression),
      ';',
    ),

    _assign_op: $ => choice(
      '=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=',
    ),

    lvalue: $ => seq(
      choice($.identifier, 'self'),
      repeat(choice(
        seq('.', $.identifier),
        seq('[', $._expression, ']'),
      )),
    ),

    send_stmt: $ => prec(PREC.SEND, seq(
      field('subject', $._expression),
      '<-',
      field('payload', $._expression),
      ';',
    )),

    if_stmt: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('then', $.block),
      repeat(seq('else', 'if', $._expression, $.block)),
      optional(seq('else', field('else', $.block))),
    )),

    match_stmt: $ => seq(
      'match',
      field('scrutinee', $._expression),
      '{',
      $.match_arm,
      repeat(seq(',', $.match_arm)),
      optional(','),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional(seq('if', field('guard', $._expression))),
      '->',
      field('body', choice($._expression, $.block)),
    ),

    _pattern: $ => choice(
      $.literal_pattern,
      $.wildcard_pattern,
      $.binding_pattern,
      $.constructor_pattern,
      $.tuple_pattern,
    ),

    literal_pattern: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      'true',
      'false',
      'nil',
    ),

    wildcard_pattern: $ => '_',

    return_stmt: $ => seq('return', optional($._expression), ';'),

    yield_stmt: $ => seq('yield', ';'),

    violate_stmt: $ => seq(
      'violate',
      field('closure_name', $.identifier),
      optional(seq('with', field('payload', $._expression))),
      ';',
    ),

    expr_stmt: $ => seq($._expression, ';'),

    // ===========================================================
    // § 15. Expressions — precedence ordered
    // ===========================================================

    parenthesized: $ => seq('(', $._expression, ')'),

    range_expr: $ => prec.left(1, seq(
      field('start', $._expression),
      field('op', choice('..', '..=')),
      field('end', $._expression),
    )),
