heron/test/corpus/recent_additions.txt
==================
Range expression in index
==================

fn slice_demo(s: String) -> String {
    return s[3..7];
}

---

(source_file
  (function_decl
    name: (identifier)
    (parameter
      name: (identifier)
      type: (primitive_type))
    return_type: (primitive_type)
    (block
      (return_stmt
        (index_expr
          object: (identifier)
          index: (range_expr
            start: (integer_literal)
            end: (integer_literal)))))))

==================
Range with identifier endpoints
==================

fn slice2(s: String, from: Int, to: Int) -> String {
    return s[from..to];
}

---

(source_file
  (function_decl
    name: (identifier)
    (parameter
      name: (identifier)
      type: (primitive_type))
    (parameter
      name: (identifier)
      type: (primitive_type))
    (parameter
      name: (identifier)
      type: (primitive_type))
    return_type: (primitive_type)
    (block
      (return_stmt
        (index_expr
          object: (identifier)
          index: (range_expr
            start: (identifier)
            end: (identifier)))))))

==================
Inclusive range
==================

fn iota(n: Int) -> String {
    return repeat("x")[0..=n];
}

---

(source_file
  (function_decl
    name: (identifier)
    (parameter
      name: (identifier)
      type: (primitive_type))
    return_type: (primitive_type)
    (block
      (return_stmt
        (index_expr
          object: (call_expr
            callee: (identifier)
            (string_literal))
          index: (range_expr
            start: (integer_literal)
            end: (identifier)))))))

==================
Unit return type
==================

fn write_bytes(b: Bytes) -> () fallible(IoError) {
    return;
}

---

(source_file
  (function_decl
    name: (identifier)
    (parameter
      name: (identifier)
      type: (primitive_type))
    return_type: (unit_type)
    (fallible_marker
      payload_type: (named_type
        (qualified_name
          (identifier))))
    (block
      (return_stmt))))

==================
Generic params on locus
==================

@form(vec)
locus ItemList<T> {
    capacity { heap items of T; }
}

---

(source_file
  (locus_decl
    (form_annotation
      form_name: (identifier))
    name: (identifier)
    (generic_params
      (generic_param
        name: (identifier)))
    (capacity_block
      (capacity_slot
        name: (identifier)
        cell_type: (named_type
          (qualified_name
            (identifier)))))))

==================
Placement block on main locus
==================

main locus App {
    params {
        worker: Worker = Worker { };
        cache: Cache = Cache { };
    }
    placement {
        worker: cooperative(pool = io);
        cache: pinned;
    }
}

---

(source_file
  (locus_decl
    name: (identifier)
    (params_block
      (param_decl
        name: (identifier)
        type: (named_type
          (qualified_name
            (identifier)))
        default: (struct_literal
          name: (qualified_name
            (identifier))))
      (param_decl
        name: (identifier)
        type: (named_type
          (qualified_name
            (identifier)))
        default: (struct_literal
          name: (qualified_name
            (identifier)))))
    (placement_block
      (placement_entry
        field: (identifier)
        spec: (placement_spec
          pool: (identifier)))
      (placement_entry
        field: (identifier)
        spec: (placement_spec)))))

==================
@locality on locus declaration
==================

@locality(L1)
locus HotPath {
    params { x: Int = 0; }
}

---

(source_file
  (locus_decl
    (locality_annotation
      tier: (locality_tier))
    name: (identifier)
    (params_block
      (param_decl
        name: (identifier)
        type: (primitive_type)
        default: (integer_literal)))))

==================
@form + @locality stack (form first)
==================

@form(hashmap, sync = lockfree, cap = 64)
@locality(L2)
locus Reg {
    capacity { pool entries of Entry indexed_by k; }
}

---

(source_file
  (locus_decl
    (form_annotation
      form_name: (identifier)
      (form_arg
        key: (identifier)
        value: (identifier))
      (form_arg
        key: (identifier)
        value: (integer_literal)))
    (locality_annotation
      tier: (locality_tier))
    name: (identifier)
    (capacity_block
      (capacity_slot
        name: (identifier)
        cell_type: (named_type
          (qualified_name
            (identifier)))
        indexed_by: (identifier)))))

==================
@form + @locality stack (locality first)
==================

@locality(L1)
@form(hashmap, sync = lockfree, cap = 32)
locus Hot {
    capacity { pool entries of Entry indexed_by k; }
}

---

(source_file
  (locus_decl
    (locality_annotation
      tier: (locality_tier))
    (form_annotation
      form_name: (identifier)
      (form_arg
        key: (identifier)
        value: (identifier))
      (form_arg
        key: (identifier)
        value: (integer_literal)))
    name: (identifier)
    (capacity_block
      (capacity_slot
        name: (identifier)
        cell_type: (named_type
          (qualified_name
            (identifier)))
        indexed_by: (identifier)))))

==================
@locality with `any` tier
==================

@locality(any)
locus Unconstrained {
    params { x: Int = 0; }
}

---

(source_file
  (locus_decl
    (locality_annotation
      tier: (locality_tier))
    name: (identifier)
    (params_block
      (param_decl
        name: (identifier)
        type: (primitive_type)
        default: (integer_literal)))))

==================
ring_layout declaration + layout/buffer_size shm_ring kwargs
==================

ring_layout ForeignRing {
    magic 0x52494E47464D5431;
    version 1 at 8 : u32;
    buffer_size at 12 : u32;
    data_at 128;
    cursor published { at 64; repr atomic_u64; load acquire; unit bytes; }
    framing byte_records { len_prefix u32; align 8; pad_sentinel 0xFFFFFFFF; }
    overflow lap_detect;
}

---

(source_file
  (ring_layout_decl
    (identifier)
    (ring_magic
      (integer_literal))
    (ring_scalar_field
      (identifier)
      (integer_literal)
      (integer_literal)
      (ring_word
        (identifier)))
    (ring_scalar_field
      (identifier)
      (integer_literal)
      (ring_word
        (identifier)))
    (ring_data_at
      (integer_literal))
    (ring_cursor_block
      (identifier)
      (ring_attr
        (identifier)
        (integer_literal))
      (ring_attr
        (identifier)
        (ring_word
          (identifier)))
      (ring_attr
        (identifier)
        (ring_word
          (identifier)))
      (ring_attr
        (identifier)
        (ring_word
          (identifier))))
    (ring_framing_block
      (ring_word
        (identifier))
      (ring_attr
        (identifier)
        (ring_word
          (identifier)))
      (ring_attr
        (identifier)
        (integer_literal))
      (ring_attr
        (identifier)
        (integer_literal)))
    (ring_overflow
      (ring_word
        (identifier)))))
